 lutram.bsv                Locally Modified          435 


* Expose LUTRAM initialized state as a method. This was necessary because the 
  Bluespec compiler unexepectedly changed the schedule of my design in 
  response to changing some buffer sizes. As with a FIFOF there should be no
  reason for most users to check it, but it does allow the multiplexed LUTRAM
  to remove the scheduling ambiguity.
  
Michael P.


----------
kfleming    Date: Wed May 19 11:04:22 EDT 2010  CSN: CSN-platforms-437
                  Wed May 19 15:04:22 UTC 2010


Directory config/pm/hasim/submodels/fpgaenv
 fpgaenv-hybrid-xupv2-serial.apm Locally Modified          436 
 fpgaenv-hybrid-evaluation-arriaII-jtag.apm Locally Modified          436 
 hasim-fpgaenv-htg-v5-pcie.apm Locally Modified          436 
 fpgaenv-htg-hwonly.apm    Locally Modified          436 
 fpgaenv-hybrid-exe.apm    Locally Modified          436 
 fpgaenv-hybrid-exe-serial-ChanIO-loopback.apm Locally Modified          436 
 hasim-fpgaenv-hybrid-sim.apm Locally Modified          436 
 fpgaenv-hybrid-htg-v5-pcie.apm Locally Modified          436 
 fpgaenv-hybrid-xupv2-serial-chanIO-loopback.apm Locally Modified          436 
 hasim-fpgaenv-null.apm    Locally Modified          436 
 fpgaenv-cycloneiii-jtag.apm Locally Modified          436 
 hasim-fpgaenv-xup.apm     Locally Modified          436 

Directory modules/bluespec/common/fpgaenv
 fpga-environment.awb      Locally Modified          436 

Directory modules/project
 project-pipeline.awb      Locally Modified          436 
 pipelines/                Locally Added               0 

Directory modules/project/pipelines
 fpga-build-pipeline.awb   Locally Added               - 

Directory modules/project
 SCons.top.pipeline.template Locally Modified          436 
 build-pipeline.awb        Locally Removed           436 

Moved build pipeline into the fpgaenv, but the build pipeline will not be used unless the top level model is pipeline build.  