@@ -1,0 +1,11 @@
+#/********************************************************************
+#* Generic FPGA build pipeline
+#********************************************************************/
+
+%name BlueSim Build Pipeline
+%desc BlueSim Build Pipeline
+%attributes tool
+
+%provides build_pipeline
+
+%scons %library SimulationPipeline.py
